Fix some warnings (after CodeInspector or SpotBugs)